refactor: #7 코드 라인 수정